@@ -2,6 +2,8 @@
   when serdo is run without arguments, and a file called "script"
     exists in the current working directory, executes that (to save a
     few inodes for the "params" files
+  fix (apparently unexploitable) stack clobber in serdo
+    (found by Nikola Vladov, many thanks)
 
 0.10:
   add sample script for /etc/minit/ctrlaltdel/run as
